@@ -5,16 +5,17 @@ using FlatFile.FixedWidth.Interfaces;
 namespace FlatFile.FixedWidth.Implementation.TypeConverters
 {
     // TODO: Make this a factory that chooses an ITypeConverter subclass for the conversion?
-    public class GenericTypeConverter : IGenericTypeConverter
+    public class PrimitiveTypeConverter : ITypeConverter
     {
         /// <summary>
-        ///     Gets converted value. Strings are right trimmed. Types with built in Parse method (e.g. primitive types, and some others)
+        ///     Gets converted value. Strings are right trimmed. Types with built in Parse method (e.g. primitive types, and some
+        ///     others)
         ///     are converted if possible using defaults.
         /// </summary>
         /// <param name="stringValue">String value to convert</param>
         /// <param name="propertyInfo">Property info of target field in model</param>
         /// <returns>Populated model</returns>
-        public object GetConvertedValue(string stringValue, PropertyInfo propertyInfo)
+        public object ConvertFromString(string stringValue, PropertyInfo propertyInfo)
         {
             if (propertyInfo.PropertyType == typeof(string))
             {
@@ -22,18 +23,20 @@ namespace FlatFile.FixedWidth.Implementation.TypeConverters
                 return stringValue.TrimEnd();
             }
 
-            // TODO: Allow TypeConverter classes to overwrite default Parse method below. Hardcoding example for bool below for now.
+            // TODO: Allow PrimitiveTypeConverter classes to overwrite default Parse method below. Hardcoding example for bool below for now.
             if (propertyInfo.PropertyType == typeof(bool))
             {
                 var converter = new BooleanTypeConverter();
                 stringValue = converter.GetConvertedString(stringValue);
             }
 
-            var parseMethod = propertyInfo.PropertyType.GetMethod("Parse", new[] { typeof(string) });
+            var parseMethod = propertyInfo.PropertyType.GetMethod("Parse", new[] {typeof(string)});
 
             if (parseMethod == null)
             {
-                return stringValue.Trim();
+                // User should implement a custom type converter instead of relying on this primitive type converter.
+                // Perhaps throw not implemented exception here instead. 
+                return stringValue.Trim(); 
             }
 
             try
