@@ -41,5 +41,16 @@ namespace FlatFile.FixedWidth.Interfaces
         /// <param name="fieldLength">Length of the field in characters</param>
         /// <returns></returns>
         IFlatFileLayoutDescriptor<TTarget> AppendField<TProperty>(Expression<Func<TTarget, TProperty>> expression, int fieldLength);
+
+        /// <summary>
+        ///     Appends field into next position. Order is important. 
+        ///     Order added must match column order in flat file.
+        /// </summary>
+        /// <typeparam name="TProperty"></typeparam>
+        /// <param name="expression">Expression for target model and field</param>
+        /// <param name="fieldLength">Length of the field in characters</param>
+        ///  /// <param name="typeConverter">Custom type converter (overrides default)</param>
+        /// <returns></returns>
+        IFlatFileLayoutDescriptor<TTarget> AppendField<TProperty>(Expression<Func<TTarget, TProperty>> expression, int fieldLength, ITypeConverter typeConverter);
     }
 }
