@@ -1,0 +1,9 @@
+﻿using System.Reflection;
+
+namespace FlatFile.FixedWidth.Interfaces
+{
+    public interface ITypeConverter
+    {
+        object ConvertFromString(string stringValue, PropertyInfo propertyInfo);
+    }
+}
