@@ -1,4 +1,4 @@
-1  Sun       Working
-2  Monday    Working
-3  T         Working
-4  Wed       Working
+1 Sun       Working
+2 Monday    Working
+3 T         Working
+4 Wed       Working
