@@ -4,7 +4,7 @@ namespace FlatFileParserUnitTests.Models
 {
     public class DummyStringModel
     {
-        public string Id { get; set; } // TODO: Make this an int, and support field.TypeConverter
+        public string Id { get; set; } // TODO: Make this an int, and support field.PrimitiveTypeConverter
         public string Field1 { get; set; }
         public string Field2 { get; set; }
         public string Field3 { get; set; }
