@@ -2,7 +2,7 @@
 {
     internal class DummyStringPairModel
     {
-        public string id { get; set; } // TODO: Make this an int, and support field.TypeConverter
+        public string id { get; set; } // TODO: Make this an int, and support field.PrimitiveTypeConverter
         public string x { get; set; }
         public string y { get; set; }
     }
